# aux

./: README.md  copy_cons.cpp  include_guard_to_pragma_once.py  lattice_hypergraph.py  offloadTest.cpp  system_header_gen.py  todo
FLOPMeasurementTest/: a.out  matrix_mult.cu  matrix_mult_cpu_only.cpp
MPIGPUHelloWorld/: CMakeLists.txt  HelloWorldKernel.cu  MPIGPUHelloWorld.cpp
_aux/: a.out  build.sh  compile.sh  compile2.sh  compile3.sh  connect.sh  connect_commands  cuda  cuda2  cuda2.cpp  hwloc  hwloc.cpp  stride_add  strided_add.cu  sycl
alloc_trial/: a.out  alloc_cuda.cu  alloc_isocpp.cpp  alloc_omp.cpp  allocisocpp  allocomp  compile.sh
constexpr_constructor_constexpr_members/: a.out  main.cpp
cuda_automake/: Makefile  Makefile.in  autoconf.sh  clean.sh  config.status  configure  configure.ac  configure_old2.ac  configure~  libtool  notes
cuda_automake/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cuda_automake/src/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in~
cuda_automake/src/aux/: aux.cu  aux2.cu  hmm.cpp
cuda_automake/src/aux/.deps/: hmm.Po  libcuda_automake_example_debug_a-hmm.Po  libcuda_automake_example_release_a-hmm.Po
cuda_automake/src/exec/: Makefile  main.cpp
cuda_macros/: Makefile  a.out  macros1.h  macros2.h  main1  main1.cu  main2  main2.cu
dace_test/: d.py
ghost_layer_dist_skeleton/: main.cpp
hardware_info/: build.sh  cuda  cuda.cpp  cuda.h  cudacores.cu  main.cpp  sycl  sycl.cpp  sycl.h
human_instrumentality_project/: CMakeLists.txt  human_instrumentality_project.cpp
hw/inputFiles/: a.out  homework1.cpp
kernel_launch/: CMakeLists.txt  check.cu  main.cpp  tarch_mimic.cpp
master_thesis_helper_scripts/: benchmark_dense_sparse_cuda.py  benchmark_sparse_dense_cuda.py  flow.py  parse.py
metis_equality_test/: main.cpp
partitioning_wellness_calculator/: compile_reader.sh  reader.cpp  reader.py
plotters/: plotter.py  pond_plotter.py  s_plotter.py
readers/: cpu_job_reader.py  ds-note.txt  pond_reader.py  reader.py  seissol_gpu_reader.py  seissol_reader.py
readers/pond/: definitions.py  matrix_stat_plotter.py
readers/pond_example_data/sc3-lazyactivation/pond-contig-local-busy-1-250-36000x36000-1/: lazy-contig-pond-local-busy-1-250-36000x36000-1.454768.err  lazy-contig-pond-local-busy-1-250-36000x36000-1.454768.out
readers/pond_example_data/sc3-lazyactivation/pond-contig-local-busy-16-250-36000x36000-1/: lazy-contig-pond-local-busy-16-250-36000x36000-1.115074.err  lazy-contig-pond-local-busy-16-250-36000x36000-1.115074.out
readers/pond_example_data/sc3-lazyactivation/pond-contig-local-busy-2-250-36000x36000-1/: lazy-contig-pond-local-busy-2-250-36000x36000-1.454769.err  lazy-contig-pond-local-busy-2-250-36000x36000-1.454769.out
readers/pond_example_data/sc3-lazyactivation/pond-contig-local-busy-24-250-36000x36000-1/: lazy-contig-pond-local-busy-24-250-36000x36000-1.115062.err  lazy-contig-pond-local-busy-24-250-36000x36000-1.115062.out  lazy-contig-pond-local-busy-24-250-36000x36000-1.115075.err  lazy-contig-pond-local-busy-24-250-36000x36000-1.115075.out
readers/pond_example_data/sc3-lazyactivation/pond-contig-local-busy-32-250-36000x36000-1/: lazy-contig-pond-local-busy-32-250-36000x36000-1.115063.err  lazy-contig-pond-local-busy-32-250-36000x36000-1.115063.out  lazy-contig-pond-local-busy-32-250-36000x36000-1.115076.err  lazy-contig-pond-local-busy-32-250-36000x36000-1.115076.out
readers/pond_example_data/sc3-lazyactivation/pond-contig-local-busy-4-250-36000x36000-1/: lazy-contig-pond-local-busy-4-250-36000x36000-1.454770.err  lazy-contig-pond-local-busy-4-250-36000x36000-1.454770.out
readers/pond_example_data/sc3-lazyactivation/pond-contig-local-busy-8-250-36000x36000-1/: lazy-contig-pond-local-busy-8-250-36000x36000-1.115077.err  lazy-contig-pond-local-busy-8-250-36000x36000-1.115077.out
readers/pond_example_data/sc3-lazyactivation/pond-contig-local-random-1-250-36000x36000-1/: lazy-contig-pond-local-random-1-250-36000x36000-1.454771.err  lazy-contig-pond-local-random-1-250-36000x36000-1.454771.out
readers/pond_example_data/sc3-lazyactivation/pond-contig-local-random-16-250-36000x36000-1/: lazy-contig-pond-local-random-16-250-36000x36000-1.115078.err  lazy-contig-pond-local-random-16-250-36000x36000-1.115078.out
readers/pond_example_data/sc3-lazyactivation/pond-contig-local-random-2-250-36000x36000-1/: lazy-contig-pond-local-random-2-250-36000x36000-1.454772.err  lazy-contig-pond-local-random-2-250-36000x36000-1.454772.out
readers/pond_example_data/sc3-lazyactivation/pond-contig-local-random-24-250-36000x36000-1/: lazy-contig-pond-local-random-24-250-36000x36000-1.115079.err  lazy-contig-pond-local-random-24-250-36000x36000-1.115079.out
readers/pond_example_data/sc3-lazyactivation/pond-contig-local-random-32-250-36000x36000-1/: lazy-contig-pond-local-random-32-250-36000x36000-1.115080.err  lazy-contig-pond-local-random-32-250-36000x36000-1.115080.out
readers/pond_example_data/sc3-lazyactivation/pond-contig-local-random-4-250-36000x36000-1/: lazy-contig-pond-local-random-4-250-36000x36000-1.454773.err  lazy-contig-pond-local-random-4-250-36000x36000-1.454773.out
readers/pond_example_data/sc3-lazyactivation/pond-contig-local-random-8-250-36000x36000-1/: lazy-contig-pond-local-random-8-250-36000x36000-1.115081.err  (+1 more)
readers/seissol/: seissol_cpu_reader.py
script_generator/: Cavity2D-16node.xml  Cavity2D-1node.xml  Cavity2D-2node.xml  Cavity2D-32node.xml  Cavity2D-4node.xml  Cavity2D-8node.xml  gen.py  strong-scaling-2node.job
supermuc_linux_cluster_scripts/: interactive-node-example.sh  set_vars_for_jobgeneration.sh  submitter.sh  zipper.sh
supermuc_linux_cluster_scripts/scripts_for_mpp2/: builder.sh  builder_debug.sh  compile-upcxx-intel.sh  ex.sh  generator.sh  move.sh
supermuc_linux_cluster_scripts/scripts_for_mpp3/: builder.sh  compile_upcxx_intel_mpp3.sh  gen_and_submit_jobs_mpp3.sh  move.sh  trace_example.sh
sysinfo/: a.out  main.cpp
very_simple_mpi_program/: CMakeLists.txt  simpleMPI.cpp
very_simple_upcxx_program/: CMakeLists.txt  simpleUPCXX.cpp
(+210 files in other folders)
